Modified weekend code - weekendcodebackupevestabilized